# agentflow

./: pyproject.toml
.claude/: settings.local.json
agentflow/: cli.py
agentflow/db/: base.py
agentflow/entities/: action.py
agentflow/utils/: __init__.py
apps/cli/: .coverage  README.md  pyproject.toml
apps/cli/src/agentflow/: __init__.py  __main__.py  cli.py  models.py  storage.py
apps/cli/src/agentflow/commands/: auth.py
apps/cli/tests/: test_auth.py  test_models.py  test_storage.py
docs/: API_SPEC.md  ARCHITECTURE.md  CLI_SPEC.md  DATABASE_SCHEMA.md  IDEAS.md  LONGTERM-VISION.md  MVP.md
docs/agent-system/: README.md
docs/agent-system/05-technical/: cli-commands.md  data-models.md  skills-format.md
docs/agent-system/06-implementation/: decisions.md  priority.md  summary.md
docs/agent-system/07-future-features/: 01-collaboration-features.md  03-quality-review-features.md  04-automation-features.md  05-analytics-features.md  08-collaboration-features.md
docs/dev/: phase-0-cli.md
tests/: conftest.py  test_action.py
